# study_courses

./: .gitignore  CMakeLists.txt
coursera/: CMakeLists.txt
coursera/cpp_whitebelt/week1/Binary/: main.cpp
coursera/cpp_whitebelt/week1/Division/: main.cpp
coursera/cpp_whitebelt/week1/Equation/: main.cpp
coursera/cpp_whitebelt/week1/GCD/: main.cpp
coursera/cpp_whitebelt/week1/MinString/: main.cpp
coursera/cpp_whitebelt/week1/SecondInclusion/: main.cpp
coursera/cpp_whitebelt/week1/division/: CMakeLists.txt  main.cpp
coursera/cpp_whitebelt/week1/minString/: main.cpp
coursera/cpp_whitebelt/week2/anagrams/: main.cpp
coursera/cpp_whitebelt/week2/averageTemperature/: main.cpp
coursera/cpp_whitebelt/week2/buses1/: main.cpp
coursera/cpp_whitebelt/week2/buses2/: CMakeLists.txt  main.cpp
coursera/cpp_whitebelt/week2/buses3/: main.cpp
coursera/cpp_whitebelt/week2/countries/: main.cpp
coursera/cpp_whitebelt/week2/factorial/: main.cpp
coursera/cpp_whitebelt/week2/map_values/: main.cpp
coursera/cpp_whitebelt/week2/maximizator/: main.cpp
coursera/cpp_whitebelt/week2/monthlyDeals/: main.cpp
coursera/neural-networks-deep-learning/week2/: Logistic_Regression_with_a_Neural_Network_mindset_v6a.ipynb  PythonBasicsWithNumpyv3a.ipynb
coursera/neural-networks-deep-learning/week3/: Planar_data_classification_with_onehidden_layer_v6c.ipynb
coursera/neural-networks-deep-learning/week4/: BuildingYourDeepNeuralNetworkStepByStepv8a.ipynb  DeepNeuralNetworkApplicationv8.ipynb
coursera/object_oriented_java/UCSDUnfoldingMaps/: README.md
stepik/: CMakeLists.txt
(+251 files in other folders)
